# ED_clickhouse

./: Cargo.toml
config/: default.toml
migrations/: 002_create_login_events_table.up.sql  004_create_sabte_ahval_events_table.up.sql  005_create_angulak_like_events_table.up.sql  006_create_angulak_watch_events_table.up.sql  007_create_session_events_table.up.sql  008_create_angulak_comment_events_table.up.sql  009_create_shahre_farang_item_events_table.up.sql  010_create_shahre_farang_play_info_events_table.up.sql  011_create_angulak_bookmark_events_table.up.sql
src/: click_house.rs  config.rs  handler.rs  main.rs  nats.rs
