[package]
name = "forghoon"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.42.0"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
clickhouse = "0.12.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
thiserror = "2.0.16"
toml = "0.9.5"