[package]
name = "forghoon"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.42.0"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
toml = "0.9.5"
futures = "0.3.31"
tokio-util = "0.7.16"
reqwest = "0.12.23"
anyhow = "1.0.99"
